[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/ui_components/tool_item/ToolItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_measurements.svg" type="Texture2D" id=2]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_rotate.svg" type="Texture2D" id=3]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_modeler.svg" type="Texture2D" id=4]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_pen.svg" type="Texture2D" id=5]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_grab.svg" type="Texture2D" id=6]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_teleport.svg" type="Texture2D" id=7]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_erase.svg" type="Texture2D" id=8]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_move.svg" type="Texture2D" id=9]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_texture_paint.svg" type="Texture2D" id=10]
[ext_resource path="res://assets/themes/ui_theme_dark.tres" type="Theme" id=11]
[ext_resource path="res://scenes/ui/tools_menu/ToolsMenu.gd" type="Script" id=12]
[ext_resource path="res://assets/icons/vr_tool_icons/WorldEnvironment.svg" type="Texture2D" id=13]
[ext_resource path="res://scripts/settings/VRToolItemEnabler.gd" type="Script" id=14]
[ext_resource path="res://assets/icons/vr_tool_icons/arrow/arrow_left.svg" type="Texture2D" id=15]
[ext_resource path="res://assets/icons/vr_tool_icons/arrow/arrow_right.svg" type="Texture2D" id=16]
[ext_resource path="res://assets/icons/vr_tool_icons/arrow/arrow_down.svg" type="Texture2D" id=17]
[ext_resource path="res://assets/icons/vr_tool_icons/arrow/arrow_up.svg" type="Texture2D" id=18]
[ext_resource path="res://scenes/ui_components/tool_shortcut/ToolShortcut.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_note.svg" type="Texture2D" id=20]
[ext_resource path="res://assets/fonts/GlacialIndifference-Bold.otf" type="FontFile" id=21]
[ext_resource path="res://scripts/ui_components/TooltipHovering.gd" type="Script" id=22]

[sub_resource type="FontFile" id=1]
size = 26
use_mipmaps = true
use_filter = true
font_data = ExtResource( 21 )

[node name="ToolsMenu" type="Control"]
offset_right = 1300.0
offset_bottom = 600.0
theme = ExtResource( 11 )
script = ExtResource( 12 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 172.0
offset_top = 166.0
offset_right = 1128.0
offset_bottom = 434.0
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
offset_right = 956.0
offset_bottom = 40.0

[node name="tooltip" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 952.0
offset_bottom = 36.0
theme_override_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="tools_panel" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
offset_top = 44.0
offset_right = 956.0
offset_bottom = 256.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/tools_panel"]
offset_right = 108.0
offset_bottom = 212.0
size_flags_horizontal = 4

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 104.0
offset_bottom = 208.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="GLOBAL_SKY" type="Control" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer"]
offset_right = 100.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 100, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY"]
offset_left = 2.0
offset_top = 2.0
offset_right = 98.0
offset_bottom = 98.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button/VBoxContainer"]
offset_right = 96.0
offset_bottom = 77.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_bottom = 0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button/VBoxContainer/MarginContainer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 92.0
offset_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button/VBoxContainer"]
offset_top = 81.0
offset_right = 96.0
offset_bottom = 96.0
text = "Arri√®re Plan"
align = 1
valign = 1
clip_text = true

[node name="TooltipHovering" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button/VBoxContainer/Label"]
script = ExtResource( 22 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY"]
script = ExtResource( 14 )
linked_debug_settings = "enable_function_hdri_switch"

[node name="GLOBAL_TEXTURE" type="Control" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer"]
offset_top = 104.0
offset_right = 100.0
offset_bottom = 204.0
custom_minimum_size = Vector2( 100, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE"]
offset_left = 2.0
offset_top = 2.0
offset_right = 98.0
offset_bottom = 98.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button/VBoxContainer"]
offset_right = 96.0
offset_bottom = 77.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_bottom = 0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button/VBoxContainer/MarginContainer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 92.0
offset_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button/VBoxContainer"]
offset_top = 81.0
offset_right = 96.0
offset_bottom = 96.0
text = "Global Texture2D"
align = 1
valign = 1
clip_text = true

[node name="TooltipHovering" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button/VBoxContainer/Label"]
script = ExtResource( 22 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE"]
script = ExtResource( 14 )
linked_debug_settings = "enable_function_global_material_switch"

[node name="panel_tools" type="PanelContainer" parent="CenterContainer/VBoxContainer/tools_panel"]
offset_left = 112.0
offset_right = 636.0
offset_bottom = 212.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools"]
offset_left = 4.0
offset_top = 4.0
offset_right = 520.0
offset_bottom = 208.0

[node name="HFlowContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer"]
offset_right = 516.0
offset_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="TOOL_TELEPORT" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_right = 100.0
offset_bottom = 100.0
target_tool_name = "TOOL_TELEPORT"
tool_icon = ExtResource( 7 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_TELEPORT"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_teleport"

[node name="TOOL_PEN" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_left = 104.0
offset_right = 204.0
offset_bottom = 100.0
target_tool_name = "TOOL_PEN"
tool_icon = ExtResource( 5 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_PEN"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_pen"

[node name="TOOL_ERASER" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_left = 208.0
offset_right = 308.0
offset_bottom = 100.0
target_tool_name = "TOOL_ERASER"
tool_icon = ExtResource( 8 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_ERASER"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_eraser"

[node name="TOOL_GRAB" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_left = 312.0
offset_right = 412.0
offset_bottom = 100.0
target_tool_name = "TOOL_GRAB"
tool_icon = ExtResource( 6 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_GRAB"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_grab"

[node name="TOOL_MOVE" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_left = 416.0
offset_right = 516.0
offset_bottom = 100.0
target_tool_name = "TOOL_MOVE"
tool_icon = ExtResource( 9 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_MOVE"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_move"

[node name="TOOL_ROTATE" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_top = 104.0
offset_right = 100.0
offset_bottom = 204.0
target_tool_name = "TOOL_ROTATE"
tool_icon = ExtResource( 3 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_ROTATE"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_rotate"

[node name="TOOL_MODELER" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_left = 104.0
offset_top = 104.0
offset_right = 204.0
offset_bottom = 204.0
target_tool_name = "TOOL_MODELER"
tool_icon = ExtResource( 4 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_MODELER"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_modeler"

[node name="TOOL_MATERIAL_PAINT" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_left = 208.0
offset_top = 104.0
offset_right = 308.0
offset_bottom = 204.0
target_tool_name = "TOOL_MATERIAL_PAINT"
tool_icon = ExtResource( 10 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_MATERIAL_PAINT"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_material_painter"

[node name="TOOL_MEASUREMENT" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_left = 312.0
offset_top = 104.0
offset_right = 412.0
offset_bottom = 204.0
target_tool_name = "TOOL_MEASUREMENT"
tool_icon = ExtResource( 2 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_MEASUREMENT"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_measurements"

[node name="TOOL_NOTE" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
offset_left = 416.0
offset_top = 104.0
offset_right = 516.0
offset_bottom = 204.0
target_tool_name = "TOOL_NOTE"
tool_icon = ExtResource( 20 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_NOTE"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_note"

[node name="panel_shortcuts" type="PanelContainer" parent="CenterContainer/VBoxContainer/tools_panel"]
offset_left = 640.0
offset_right = 956.0
offset_bottom = 212.0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts"]
offset_left = 4.0
offset_top = 4.0
offset_right = 312.0
offset_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tool_Shortcut_Left" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer" instance=ExtResource( 19 )]
offset_top = 52.0
offset_right = 100.0
offset_bottom = 152.0
shortcut_direction = 2
arrow_icon = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer"]
offset_left = 104.0
offset_right = 204.0
offset_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tool_Shortcut_Up" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer/VBoxContainer" instance=ExtResource( 19 )]
offset_right = 100.0
offset_bottom = 100.0
arrow_icon = ExtResource( 18 )

[node name="Tool_Shortcut_Down" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer/VBoxContainer" instance=ExtResource( 19 )]
offset_top = 104.0
offset_right = 100.0
offset_bottom = 204.0
shortcut_direction = 1
arrow_icon = ExtResource( 17 )

[node name="Tool_Shortcut_Right" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer" instance=ExtResource( 19 )]
offset_left = 208.0
offset_top = 52.0
offset_right = 308.0
offset_bottom = 152.0
shortcut_direction = 3
arrow_icon = ExtResource( 16 )

[node name="tool_menus" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
offset_top = 260.0
offset_right = 956.0
offset_bottom = 268.0
size_flags_horizontal = 5
theme_override_constants/separation = 32
alignment = 1

[node name="main_menu" type="PanelContainer" parent="CenterContainer/VBoxContainer/tool_menus"]
offset_left = 454.0
offset_right = 462.0
offset_bottom = 8.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="sub_menu" type="PanelContainer" parent="CenterContainer/VBoxContainer/tool_menus"]
offset_left = 494.0
offset_right = 502.0
offset_bottom = 8.0
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button" to="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button/VBoxContainer/Label/TooltipHovering" method="update_tooltip"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button" to="." method="switch_hdri"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button" to="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button/VBoxContainer/Label/TooltipHovering" method="update_tooltip"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button" to="." method="switch_global_material"]
